<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                 <TextView
                     android:id="@+id/textView_port"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Port:" />

                 <Spinner
                     android:id="@+id/spinner1"
                     android:layout_width="163dp"
                     android:layout_height="50dp" 
                     android:entries="@array/serialport_name"/>
                 
                  <TextView
                     android:id="@+id/textView_baud"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Baud:" />

                 <Spinner
                     android:id="@+id/spinner2"
                     android:layout_width="147dp"
                     android:layout_height="50dp"
                     android:entries="@array/baudrates_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnopendevice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opendevice" />

                <Button
                    android:id="@+id/btnOpenPic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/openpic" />

                <Button
                    android:id="@+id/btnWordToPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wordtopic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnQrCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qrcode" />

                <Button
                    android:id="@+id/btnBarCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode" />

                <Button
                    android:id="@+id/btnPrintPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printpic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/checkBoxTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/timing" />

                <Button
                    android:id="@+id/btnPrint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print" />

                <Button
                    android:id="@+id/btnUnicode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_printunicode" />
            </LinearLayout>
            
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="STATE" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <ImageView
                    android:id="@+id/iv_test"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>