<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkBox_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_serialport_hexrec" />

        <EditText
            android:id="@+id/tvRev"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText_send"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:ems="10"
                android:gravity="top"
                android:text="1b 26 01"
               
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/str_button_send" />

                <CheckBox
                    android:id="@+id/checkBox_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_serialport_hexsend" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</ScrollView>